<resources>
    <string name="app_name">v deliver.</string>
    <string name="feel_the_speed">Feel The Speed</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="v_deliver">v deliver.</string>
    <string name="sign_in_to_continue">Sign In to continue !</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="i_m_a_new_user_sign_up">I am a new user. Sign Up</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account,</string>
    <string name="sign_up_to_get_started">Sign Up to get started !</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="im_already_a_member_sign_in">I am already a member. Sign In</string>
    <string name="your_info">Your Info,</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="vehicle_info">Vehicle Info,</string>
    <string name="save">Save</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_the_email_address_linked_to_your_account">Enter the Email address linked to your account,</string>
    <string name="email">Email</string>
    <string name="get_code">Get code</string>
    <string name="back_to_sign_in">Back to Sign In</string>
    <string name="new_password">New Password,</string>
    <string name="code">Code</string>
    <string name="new_password_newp">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="resend_code">Resend code</string>
    <string name="change_password">Change Password,</string>
    <string name="newpassword">New Password</string>
    <string name="reset">Reset</string>
    <string name="password_updated">Password Updated !</string>
    <string name="your_new_password_has_been_set">Your new password has been set.</string>
    <string name="proceed">Proceed</string>
    <string name="have_a_good_day">Have a good day!</string>
    <string name="hi">Hi,</string>
    <string name="deliveries">Deliveries</string>
    <string name="pickups">Pickups</string>
    <string name="vehicle">Vehicle</string>
    <string name="wallet">Wallet</string>
    <string name="message_warehouse">Message Warehouse</string>
    <string name="call_warehouse">Call Warehouse</string>
    <string name="username">Username</string>
    <string name="log_out">Log out</string>
    <string name="change_password_acnt">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="today_s_pickups">Pickup List</string>
    <string name="delivery_list">Delivery List</string>
    <string name="alerts">Alerts</string>
    <string name="alert_list">Alert List</string>
    <string name="date">Date -</string>
    <string name="time">Time -</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="enter_the_message">Enter the message</string>
    <string name="pickup_details">Pickup Details</string>
    <string name="pickup_info">Pickup Info,</string>
    <string name="update">Update</string>
    <string name="delivery_info">Delivery Info,</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="your_vehicle">Your Vehicle,</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="upgrade">Upgrade</string>
    <string name="pxxxxxx">PXXXXXX</string>
    <string name="picked_up">Picked Up</string>
    <string name="postponed">Postponed</string>
    <string name="cancelled">Cancelled</string>
    <string name="dxxxxxx">DXXXXXX</string>
    <string name="delivered">Delivered</string>
    <string name="upgrades">Upgrades,</string>
    <string name="fuel">Fuel</string>
    <string name="tyre">Tyre</string>
    <string name="engine">Engine</string>
    <string name="other">Other</string>
    <string name="if_other">If Other</string>
    <string name="amount">Amount</string>
    <string name="wallete">Wallet,</string>
    <string name="rs_xxxxx">Rs.XXXXX</string>
    <string name="add_to_wallet">Add to wallet</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="cash_on_pickup">Cash on Pickup</string>
    <string name="pickup_id">Pickup ID</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="delivery_id">Delivery ID</string>
    <string name="employee_id">Employee ID</string>
</resources>