<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:padding="20dp"
    android:background="@drawable/start"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/sign_in_to_continue"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:hintTextColor="#32000000"
            app:placeholderTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textColorLink="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="#32000000"
            app:passwordToggleEnabled="true"
            app:placeholderTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textColorLink="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/fgtbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="#00000000"
            android:elevation="0dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            tools:ignore="RtlHardcoded,UnusedAttribute" />

        <CheckBox
            android:id="@+id/check_Keeploggedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/keep_me_logged_in"
            android:textColorHighlight="@color/black"
            android:textColorLink="@color/black"
            android:textSize="16sp"
            android:theme="@style/colouredCheckBox" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="150dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/montserrat"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/btn"
            app:rippleColor="@color/btn" />

        <Button
            android:id="@+id/newbtn"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="#00000000"
            android:fontFamily="@font/montserrat"
            android:text="@string/i_m_a_new_user_sign_up"
            android:textColor="@color/black"
            android:textSize="16sp" />




    </LinearLayout>



</LinearLayout>