<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".PasswordUpdated"
    android:padding="20dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/pswdupd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/password_updated"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="115dp"
        android:layout_height="100dp"
        android:layout_marginTop="75dp"
        android:layout_gravity="center"
        android:src="@drawable/icons8_ok_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/your_new_password_has_been_set"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/proceedbtn"
            android:layout_width="150dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/montserrat"
            android:text="@string/proceed"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/btn"
            app:rippleColor="@color/btn" />
    </LinearLayout>


</LinearLayout>