<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@drawable/start"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/sign_up_to_get_started"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emal"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:hintTextColor="#32000000"
            app:placeholderTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textColorLink="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/paswd"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:hintTextColor="#32000000"
            app:passwordToggleEnabled="true"
            app:placeholderTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textColorLink="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/comfpswd"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="#32000000"
            app:passwordToggleEnabled="true"
            app:placeholderTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/compswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textColorLink="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="150dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/montserrat"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/btn"
            app:rippleColor="@color/btn" />

        <Button
            android:id="@+id/member"
            android:layout_width="367dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:fontFamily="@font/sanchez"
            android:text="@string/im_already_a_member_sign_in"
            android:textColor="@color/black"
            android:textSize="16sp" />




    </LinearLayout>


</LinearLayout>