<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_up"
    tools:context=".ForgotPswd"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fgt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/enter_the_email_address_linked_to_your_account"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:hintTextColor="#32000000"
            app:placeholderTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textColorLink="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/getcodebtn"
            android:layout_width="150dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:layout_marginTop="75dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/montserrat"
            android:text="@string/get_code"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:backgroundTint="@color/btn"
            app:rippleColor="@color/btn" />

    </LinearLayout>

</LinearLayout>