<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_up"
    tools:context=".ChangePswd"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/chngpswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/code"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_password"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:hintTextColor="#32000000"
            app:placeholderTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textColorLink="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/fgtbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="#00000000"
            android:elevation="0dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            tools:ignore="RtlHardcoded,UnusedAttribute" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newpwd"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newpassword"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="#32000000"
            app:passwordToggleEnabled="true"
            app:placeholderTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textColorLink="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confnewpswd"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_new_password"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="#32000000"
            app:passwordToggleEnabled="true"
            app:placeholderTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textColorLink="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/resbtn"
            android:layout_width="150dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/montserrat"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/btn"
            app:rippleColor="@color/btn" />



    </LinearLayout>

</LinearLayout>